test/asm/def.simple.err
ERROR: def.asm(23):
    'constant' already defined at def.asm(10)
ERROR: def.asm(29):
    syntax error
error: Assembly aborted (2 errors)!
